--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "mo-facts",
+	"name": "factorio-icons",
 	"version": "1.0.0",
-	"description": "This is a sample plugin for Obsidian (https://obsidian.md)",
+	"description": "Adds corresponding icons to factorio item names",
 	"main": "main.js",
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
@@ -9,7 +9,7 @@
 		"version": "node version-bump.mjs && git add manifest.json versions.json"
 	},
 	"keywords": [],
-	"author": "",
+	"author": "SMG3zx",
 	"license": "MIT",
 	"devDependencies": {
 		"@types/node": "^16.11.6",
